--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/profile/profile-bg-5.webp" alt="" data-aos="fade-in">
+      <img src="assets/img/profile/palanga.jpg" alt="" data-aos="fade-in">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-center">
@@ -136,7 +136,7 @@
             <div class="profile-card">
               <div class="profile-header">
                 <div class="profile-avatar">
-                  <img src="assets/img/profile/profile-square-3.webp" class="img-fluid" alt="">
+                  <img src="assets/img/profile/IMG_9064.jpg" class="img-fluid" alt="">
                   <div class="status-indicator"></div>
                 </div>
                 <h3>Laurynas Gedvilas</h3>
@@ -429,6 +429,10 @@
               </div>
               <h4>Brand Identity</h4>
               <p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus vivamus magna.</p>
+              <ul class="list-check">
+                <li>First benefit</li>
+                <li>Second benefit</li>
+              </ul>
               <a href="service-details.html" class="read-more">
                 <span>Explore</span>
                 <i class="bi bi-arrow-right"></i>
@@ -444,6 +448,16 @@
               </div>
               <h4>UI/UX Design</h4>
               <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui donec rutrum.</p>
+              <ol class="list-steps">
+                <li>
+                  Step one
+                  <ul>
+                    <li>Detail A</li>
+                    <li>Detail B</li>
+                  </ul>
+                </li>
+                <li>Step two</li>
+              </ol>
               <a href="service-details.html" class="read-more">
                 <span>Explore</span>
                 <i class="bi bi-arrow-right"></i>
@@ -458,6 +472,20 @@
               </div>
               <h4>Development</h4>
               <p>Praesent sapien massa convallis a pellentesque nec egestas non nisi cras ornare arcu.</p>
+                            <table class="table-data">
+                <thead>
+                  <tr>
+                    <th>Feature</th>
+                    <th class="numeric">Value</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Projects completed</td>
+                    <td class="numeric">42</td>
+                  </tr>
+                </tbody>
+              </table>
               <a href="service-details.html" class="read-more">
                 <span>Explore</span>
                 <i class="bi bi-arrow-right"></i>
